Use hero section on news page and articles as well

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,6 +19,7 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700&display=swap" rel="stylesheet">
         <link href="/css/icons.css" rel="stylesheet" type="text/css">
         <link href="/css/base.css" rel="stylesheet" type="text/css">
+        <link href="/css/hero.css" rel="stylesheet" type="text/css">
         {{ end }}
 
         {{ block "css" . }}
