--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,18 +1,27 @@
 <header>
-    <nav>
-        <ul>
-            <li><a href="/"><div class="icon-padlock"></div></a></li>
-            <li><a href="/pricing/">Pricing</a></li>
-            <li><a href="/pricing/">Business</a></li>
-            <li><a href="/news/">Blog</a></li>
-        </ul>
-    </nav>
-    <div class="spacer"></div>
-    <nav>
-        <a href="https://beta.padloc.app/login" class="login-button">Login</a>
+  <nav>
+    <ul>
+      <li>
+        <a href="/"><div class="icon-padlock"></div></a>
+      </li>
+      <li><a href="/pricing/">Pricing</a></li>
+      <li><a href="/news/">Blog</a></li>
+    </ul>
+  </nav>
+
+  <div class="spacer"></div>
+
+  <nav class="login-signup">
+    <ul>
+      <li>
+        <a href="https://beta.padloc.app/login" class="">Login</a>
+      </li>
+      <li>
         <a href="https://beta.padloc.app/signup" class="signup-button btn">
-            <span>Try For Free</span>
-            <span class="icon icon-play-circle"></span>
+          <span>Try For Free</span>
+          <span class="icon icon-play-circle"></span>
         </a>
-    </nav>
+      </li>
+    </ul>
+  </nav>
 </header>
