--- a/static/css/home.css
+++ b/static/css/home.css
@@ -14,51 +14,21 @@
   }
 }
 
-html,
-body {
-  overflow-x: hidden;
-}
-
-main {
-  max-width: none;
-  margin: 0;
-  padding: 0;
-}
-
-section {
-  margin: 0;
-  padding: 0;
+section:not(.hero) {
   position: relative;
   padding-top: 100px;
   height: 350px;
   perspective: 3000px;
+  margin: 0;
 }
 
-section:nth-of-type(2n) {
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.05) 100%
-  );
-}
-
-section:nth-of-type(2n + 1) {
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 0.05) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
-}
-
-section > .inner {
+section:not(.hero) > .inner {
   display: flex;
   flex-direction: column;
   justify-content: start;
   position: relative;
   height: 100%;
-  box-sizing: border-box;
-  width: 800px;
-  margin: 0 auto;
+  max-width: 900px;
 }
 
 section h1 {
@@ -96,97 +66,13 @@ section h2 {
 /* HERO SECTION */
 
 section.hero {
-  position: relative;
-  padding-top: 0;
   height: 630px;
-  color: #fff;
-  overflow: visible;
-  text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
-  z-index: 10;
-}
-
-section.hero::after {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  z-index: -1;
-  left: -25%;
-  width: 150%;
-  height: 150%;
-  background-color: #23b4ff;
-  background: linear-gradient(180deg, #59c6ff 0%, #077cb9 100%);
-  transform-origin: center center;
-  transform: translate(0, -38%) rotate(-9deg);
-  border-radius: 100%;
-  animation: reveal2 2.5s -1s backwards;
+  margin: 0;
 }
 
 section.hero .inner {
-  justify-content: center;
-}
-
-.hero header,
-section.hero .inner > * {
-  animation: reveal 1s backwards;
-}
-
-.hero header {
-  position: absolute;
-  background: transparent;
-  box-shadow: none;
-  border: none;
-  text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
-}
-
-.hero header .signup-button {
-  background: transparent;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
-}
-
-.hero a {
-  color: #fff;
-}
-
-section.hero .inner .logo {
-  height: 60px;
-  width: 200px;
-  stroke: currentColor;
-  fill: currentColor;
-  stroke-width: 7;
-  margin-bottom: 30px;
-  animation-delay: 0.2s;
-}
-
-section.hero h1 {
-  display: none;
-}
-
-section.hero .inner h2 {
-  font-weight: 300;
-  width: 420px;
-  margin-bottom: 40px;
-  animation-delay: 0.4s;
-}
-
-section.hero .inner h2 strong {
-  font-weight: 700;
-}
-
-.hero .description {
-  width: 450px;
-  margin-bottom: 40px;
-  font-size: 110%;
-}
-
-section.hero .inner > .buttons {
-  animation-delay: 0.6s;
-}
-
-.hero .inner button,
-.hero .inner .btn {
-  font-size: 110%;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
+  padding: 100px 50px;
+  max-width: 900px;
 }
 
 .device-stage.hero .device-wrapper {
