Add Business and beta page; update download page

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,6 +20,7 @@
         <link href="/css/icons.css" rel="stylesheet" type="text/css">
         <link href="/css/base.css" rel="stylesheet" type="text/css">
         <link href="/css/hero.css" rel="stylesheet" type="text/css">
+        <link href="/css/plans.css" rel="stylesheet" type="text/css">
         {{ end }}
 
         {{ block "css" . }}
