--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
     <nav>
         <ul>
             <li><a href="/news/">News</a></li>
-            <li><a href="/howto/">Howto</a></li>
+            <li><a href="/guides/">Guides</a></li>
             <li><a href="/downloads/">Downloads</a></li>
             <li><a href="mailto:contact@padlock.io">Contact</a></li>
             <li><a href="/privacy/">Privacy</a></li>
