--- a/static/css/base.css
+++ b/static/css/base.css
@@ -16,11 +16,22 @@ button {
   -webkit-font-smoothing: antialiased;
 }
 
-input,
+input:not([type=radio]):not([type=checkbox]),
 button {
   -webkit-appearance: none;
   -moz-appearance: none;
   border-radius: 8px;
+  font: inherit;
+}
+
+input {
+  background: white;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  padding: 0.3em 0.7em;
+}
+
+input:focus {
+  border-color:  #23b4ff;
 }
 
 button {
@@ -39,12 +50,12 @@ h1 {
 }
 
 h2 {
-  font-size: 120%;
+  font-size: 150%;
   font-weight: 400;
 }
 
 h3 {
-  font-size: 110%;
+  font-size: 120%;
   font-weight: 400;
 }
 
@@ -54,7 +65,7 @@ a {
   font-weight: 400;
 }
 
-a:hover {
+button:hover, a:hover {
   opacity: 0.7;
 }
 
@@ -99,7 +110,7 @@ header {
   z-index: 10;
   box-sizing: border-box;
   font-size: 110%;
-  padding: 0 10px 0 15px;
+  padding: 0 10px 0 20px;
   height: 60px;
   display: flex;
   align-items: center;
@@ -115,8 +126,6 @@ header .signup-button {
 }
 
 header .signup-button {
-  background: #23b4ff;
-  color: white;
   display: flex;
   align-items: center;
 }
@@ -190,6 +199,10 @@ section > .inner {
   margin: 0 auto;
 }
 
+section.plans > .inner {
+  max-width: 1100px;
+}
+
 ul.articles {
   list-style: none;
   margin: 0;
@@ -224,7 +237,7 @@ li article .title {
   align-items: center;
 }
 
-li article h2 {
+li article h3 {
   flex: 1;
   margin: 0;
 }
@@ -289,16 +302,19 @@ figure.float.left {
 
 button,
 .btn {
+  background: #23b4ff;
+  color: white;
   display: inline-flex;
   flex-direction: row;
   align-items: center;
-  border-radius: 4px;
-  border: solid 2px;
-  padding: 15px 20px;
+  justify-content: center;
+  padding: 0.5em 0.9em;
   position: relative;
   vertical-align: middle;
   border-radius: 8px;
+  font: inherit;
   font-weight: bold;
+  border: none;
 }
 
 button .icon,
