--- a/static/css/downloads.css
+++ b/static/css/downloads.css
@@ -1,69 +1,29 @@
-h1 {
-    margin-bottom: 30px;
+ul.downloads-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 1em;
 }
 
-section.downloads {
-    text-align: center;
+ul.downloads-list li {
+    /* margin: 1em 0; */
 }
 
-.downloads p {
-    text-align: center;
-}
-
-.downloads .download-link-direct {
-    display: inline-block;
-    padding: 0;
-    margin-bottom: 10px;
-    position: relative;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 110%;
-    font-weight: bold;
-}
-
-.downloads .download-link-direct .inner {
-    width: 200px;
-    height: 200px;
+ul.downloads-list li a {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    border-radius: 8px;
+    border: solid 1px rgba(0, 0, 0, 0.1);
+    padding: 1em;
 }
 
-.downloads .download-link-direct .icon {
-    display: block;
-    width: 100px;
-    height: 100px;
-    font-size: 90px;
-    line-height: 100px;
-    margin-bottom: 10px;
+ul.downloads-list .icon {
+    font-size: 2em;
+    margin-right: 0.5em;
 }
 
-.download-link-direct.coming-soon {
-    touch-action: none;
-    opacity: 0.5;
-    cursor: default;
-}
-
-.download-link-direct.beta .inner {
-    height: 170px;
-}
-
-.download-link-direct.beta:after, .download-link-direct.coming-soon:after {
-    display: block;
-    background: #59c6ff;
-    color: white;
-    width: 100%;
-    text-align: center;
-    border-radius: 0 0 2px 2px;
-    font-size: 90%;
-    line-height: 30px;
-}
-
-.download-link-direct.beta:after {
-    content: "beta";
-}
-
-.download-link-direct.coming-soon:after {
-    content: "coming soon";
+.download-title {
+    font-size: 1.2em;
 }
