(re)optimize for mobile

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,7 +8,7 @@
         {{ block "meta" . }}
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="apple-itunes-app" content="app-id=871710139">
+        <!-- <meta name="apple&#45;itunes&#45;app" content="app&#45;id=871710139"> -->
         {{ end }}
 
         {{ block "favicon" . }}
