--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,13 +1,16 @@
 <footer>
-    <a href="http://maklesoft.com" target="_blank" class="copyright maklesoft">&copy; 2016 MaKleSoft</a>
     <nav>
         <ul>
-            <li><a href="/news/">News</a></li>
+            <li><a href="/business/">Business</a></li>
+            <li><a href="/blog/">Blog</a></li>
             <li><a href="/guides/">Guides</a></li>
             <li><a href="/downloads/">Downloads</a></li>
-            <li><a href="mailto:contact@padlock.io">Contact</a></li>
+            <li><a href="mailto:contact@pacloc.app">Contact</a></li>
             <li><a href="/privacy/">Privacy</a></li>
             <li><a href="{{ .Param "githubUrl" }}" class="padlock-github">Source</a></li>
         </ul>
     </nav>
+    <div class="copyright">
+        &copy; 2019 MaKleSoft UG, Meisenstr. 5, 91522 Ansbach, Germany
+    </div>
 </footer>
