--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,8 +4,8 @@
       <li>
         <a href="/"><div class="icon-padlock"></div></a>
       </li>
-      <li><a href="/business/">Business</a></li>
-      <li><a href="/news/">Blog</a></li>
+      <li class="wide"><a href="/business/">Business</a></li>
+      <li class="wide"><a href="/news/">Blog</a></li>
     </ul>
   </nav>
 
