--- a/layouts/section/business.html
+++ b/layouts/section/business.html
@@ -9,7 +9,7 @@
     section.hero img {
         width: 500px;
         float: right;
-        margin: 80px 20px 0 20px;
+        margin: 40px 20px 0 20px;
     }
 </style>
 
@@ -17,7 +17,7 @@
     {{ partial "header" . }}
 
     <div class="inner">
-        <img src="/img/illustrations/team2.svg">
+        <img src="/img/illustrations/team2.svg" class="wide">
 
         <h1>
             {{ partial "logo.svg" . }}
