--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
         <a href="/"><div class="icon-padlock"></div></a>
       </li>
       <li class="wide"><a href="/business/">Business</a></li>
-      <li class="wide"><a href="/news/">Blog</a></li>
+      <li class="wide"><a href="/blog/">Blog</a></li>
     </ul>
   </nav>
 
