--- a/layouts/section/beta.html
+++ b/layouts/section/beta.html
@@ -13,7 +13,7 @@
     }
 
     form .field {
-      margin: 0.7em 0;
+      margin: 0.5em 0;
     }
 
     form .field > * {
@@ -21,17 +21,22 @@
     }
 
     form .field label {
-        font-weight: bold;
         margin: 0 0.4em;
     }
 
     form .field input[name="EMAIL"] {
+        display: block;
         width: 100%;
         box-sizing: border-box;
+        margin: 0.5em 0 1.2em 0;
     }
 
     form .optional.field label {
         font-weight: normal;
+    }
+
+    form button {
+        margin-top: 1em;
     }
 
     @media (max-width: 700px) {
@@ -57,7 +62,7 @@
             <strong>Padloc is almost ready for prime time</strong> but there are still some rough
             edges that need smoothing out. Can't wait? Apply as a beta tester and
             get access right away! Or you an just leave your email here
-            and we'll let you know when it's ready. 😉
+            and we'll let you know when it's ready.
         </h3>
     </div>
 </section>
@@ -65,18 +70,19 @@
 <section>
     <div class="inner">
         <form action="https://padlock.us3.list-manage.com/subscribe/post?u=156fa42cf0f141436c20b06b2&amp;id=58a9450e8b" method="post">
-            <div class="field">
+            <div class="field email">
+                <label><strong>Enter Your Email</strong> (no spam, pinky promise!)</label>
                 <input type="email" value="" name="EMAIL" placeholder="Email Address" required/>
             </div>
 
-            <div class="field">
+            <div class="field radio">
                 <label for="radio1">I want to be a beta tester! 👷</label>
-                <input type="radio" required value="1" name="group[27913][1]" id="radio1" />
+                <input type="radio" required value="1" name="group[27913][1]" id="radio1" required/>
             </div>
 
-            <div class="field">
+            <div class="field radio">
                 <label for="radio2">Just let me know when it's ready.</label>
-                <input type="radio" required value="0" name="group[27913][1]" id="radio2" />
+                <input type="radio" required value="0" name="group[27913][1]" id="radio2" required/>
             </div>
 
             <input type="hidden" name="b_156fa42cf0f141436c20b06b2_58a9450e8b" tabindex="-1" value="" />
