Update github url

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -70,8 +70,8 @@
                 licence so anyone can review it, provide feedback and even
                 offer contributions at any time!
             </h3>
-            <a href="{{ .Param "githubUrl" }}" class="padlock-github">Find Padloc On Github &raquo;</a>
-            <a href="{{ .Param "whitepaper_url" }}" class="padlock-github">Read The Security Whitepaper &raquo;</a>
+            <a href="{{ .Param "github_url" }}" class="padlock-github" target="_blank">Find Padloc On Github &raquo;</a>
+            <a href="{{ .Param "security_whitepaper_url" }}" class="padlock-github" target="_blank">Read The Security Whitepaper &raquo;</a>
         </div>
     </section>
 
