--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
             <li><a href="/downloads/">Downloads</a></li>
             <li><a href="mailto:contact@pacloc.app">Contact</a></li>
             <li><a href="/privacy/">Privacy</a></li>
-            <li><a href="{{ .Param "githubUrl" }}" class="padlock-github">Source</a></li>
+            <li><a href="{{ .Param "github_url" }}" class="padlock-github">Source</a></li>
         </ul>
     </nav>
     <div class="copyright">
